pm 要求不要使用 bootstrap 的 start 使用 * 就好 ~
錯誤訊息放在button 的左邊

--- a/app-brand.html
+++ b/app-brand.html
@@ -98,7 +98,7 @@
                     </div>
                     <div class="form-group">
 
-                        <label class="col-sm-2 control-label"><span class="glyphicon glyphicon-star text-danger"></span><span class="langkeyT">Detailed description</span></label>
+                        <label class="col-sm-2 control-label"><span class="text-danger">*</span> <span class="langkeyT">Detailed description</span></label>
                         <div class="col-sm-10">
                             <textarea id="appIntro" class="col-sm-12 wordsCount langkeyPH" placeholder="Latest and popular videos all in FLIPr app!"></textarea>
                              <span class="help-block text-right"><span class="words-amount">0</span> <span class="langkeyT">Best within 80 characters</span></span>
@@ -106,14 +106,14 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-2 control-label"><span class="glyphicon glyphicon-star text-danger"></span><span class="langkeyT">Short descript</span></label>
+                        <label class="col-sm-2 control-label"><span class="text-danger">*</span>  <span class="langkeyT">Short descript</span></label>
                         <div class="col-sm-10">
                             <input id="appSortIntro" type="text" class="form-control wordsCount langkeyPH" placeholder="Latest and popular videos, updating EVERY DAY!">
                             <span class="help-block text-right"><span class="words-amount ">0</span> <span class="langkeyT">Best within 40 characters</span></span>
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-2 control-label"><span class="glyphicon glyphicon-star text-danger"></span><span class="langkeyT">call to action</span></label>
+                        <label class="col-sm-2 control-label"><span class="text-danger">*</span> <span class="langkeyT">call to action</span></label>
                         <div class="col-sm-10">
                             <input id="appSlogan" type="text" class="form-control wordsCount langkeyPH" placeholder="FREE to download now!">
                             <span class="help-block text-right "><span class="words-amount">0</span> <span class="langkeyT">Best within 15 characters</span></span>
@@ -165,7 +165,7 @@
 
                     <hr>
                     <div class="pull-right">
-
+                    <span id="sbErrMsg" class="text-danger"></span><span> &nbsp; &nbsp; </span> 
                     <!--<a id="funcCancel" class="btn btn-default" >Cancel</a>-->
                     <a id="btnSave" class="btn btn-primary langkeyT">Save & Visit the page</a>
                     </div>
