update language string

--- a/app-brand.html
+++ b/app-brand.html
@@ -157,7 +157,7 @@
 
                         <div id="addNewSuggested" class="col-sm-6 col-md-4">
                             <div class="thumbnail empty-add">
-                                <span class="empty-add-text">+Add suggested program</span> 
+                                <span class="empty-add-text langkeyT">+Add suggested program</span> 
                             </div>
                         </div>
 
