--- a/app-brand.html
+++ b/app-brand.html
@@ -131,6 +131,7 @@
                         <span class="btn btn-default badge" data-container="body" data-toggle="popover" 
                             data-content="<img src='images/landing-tooltip2.gif'><br />">?</span></h3>
 
+                    <h4 class="langkeyT">SNS</h4>
                     <div id="listsSNS"></div>
 
                     <div id="addNewSNS" class="form-group">
@@ -144,13 +145,12 @@
 
                 </form>
 
-                <form class="form-horizontal" role="form">
-
-
-                    <h3>
+                <form class="form-horizontal formSugg hide" role="form">
+                    <h4>
+                        <span class="text-danger">*</span>
                         <span class="langkeyT">Suggested programs</span>
                         <span class="btn btn-default badge" data-container="body" data-toggle="popover" 
-                            data-content="<img src='images/landing-tooltip3.gif'><br />">?</span></h3>
+                            data-content="<img src='images/landing-tooltip3.gif'><br />">?</span></h4>
 
                     <div class="row">
                         <div id="listsSuggested"></div>
@@ -162,7 +162,9 @@
                         </div>
 
                     </div>
+                </form>
 
+                <form class="form-horizontal" role="form">
                     <hr>
                     <div class="pull-right">
                     <span id="sbErrMsg" class="text-danger"></span><span> &nbsp; &nbsp; </span> 
@@ -189,7 +191,7 @@
     <script id="tmpl-lists-SNS" type="text/x-jquery-tmpl">
         <div id="SNS_${id}" data-meta="${id}" data-seq="${seq}"
              class="form-group listItem{{if id > 1407400000000}} newItem{{/if}}">
-            <label class="col-sm-2 control-label">${nn._([cms.global.PAGE_ID, 'main-area', 'SNS'])}</label>
+            <label class="col-sm-2 control-label SNS-Seq"></label>
             <div class="col-sm-10">
                 <div class="input-group">
                     <input type="text" value="${link}" class="form-control inUrlSNS" 
