--- a/portal-manage.html
+++ b/portal-manage.html
@@ -296,6 +296,7 @@
         <div class="clearfix">
             <div class="banner-wrap">
                 <div class="thumb-wrap">
+                    <div class="btn-upload-flash"></div>
                     <div class="progress hide">
                       <div class="progress-bar progress-bar-striped active"  role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
                         <span class="sr-only">&nbsp;</span>
@@ -307,7 +308,7 @@
                     <span class="thumb-inner-text imgTitle {{if iosBannerUrl !== ''}} hide{{/if}}">${nn._([cms.global.PAGE_ID, 'channel-list', 'iOS image Upload Now!'])}</span>
                     <span class="thumb-inner-warning errMsg hide">${nn._([cms.global.PAGE_ID, 'channel-list', 'The photo you uploaded is too small! It must be at least 1536 pixels wide and 570 pixels tall.'])}</span>
                     <div class="thumb-hover-wrap">
-                        <span id="upImgiOS" style="margin-top:12px"></sapn>
+                        <span id="upImgiOS"></sapn>
                     </div>
                 </div>
                 <div class="banner-text">
@@ -317,6 +318,7 @@
 
             <div class="banner-wrap">
                 <div class="thumb-wrap">
+                    <div class="btn-upload-flash"></div>
                     <div class="progress hide">
                       <div class="progress-bar progress-bar-striped active"  role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
                         <span class="sr-only">&nbsp;</span>
