--- a/portal-manage.html
+++ b/portal-manage.html
@@ -71,7 +71,7 @@
         <div id="title-func" class="clearfix">
             <h2><span class="langkey">Main Channels</span> &gt; <span class="set_name"></span></h2>
             <ul>
-                <li class="hide"><p class="btns"><span><a href="javascript:void(0)" id="set-preview" target="_blank" class="langkey">Preview</a></span></p></li>
+                <li class=""><p class="notice hide"></p></li>
                 <li id="set-save" class="last"><p class="btns"><span><a href="javascript:void(0)" class="langkey">Save</a></span></p></li>
             </ul>
         </div>
@@ -296,44 +296,46 @@
         <div class="clearfix">
             <div class="banner-wrap">
                 <div class="thumb-wrap">
-                    <div class="btn-upload-flash"></div>
+                    <div class="btn-upload-flash"><span id="upImgiOS" /></div>
                     <div class="progress hide">
                       <div class="progress-bar progress-bar-striped active"  role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
                         <span class="sr-only">&nbsp;</span>
                       </div>
                     </div>
 
-                    <div class="centre-image keyCardImg" id="keyCardiOS" style="background-image: url('${iosBannerUrl}?${cms.global.RAND}')"></div>
+                    <div class="centre-image keyCardImg" id="keyCardiOS" data-meta="${iosBannerUrl}" style="background-image: url('${iosBannerUrl}')"></div>
                     
                     <span class="thumb-inner-text imgTitle {{if iosBannerUrl !== ''}} hide{{/if}}">${nn._([cms.global.PAGE_ID, 'channel-list', 'iOS image Upload Now!'])}</span>
                     <span class="thumb-inner-warning errMsg hide">${nn._([cms.global.PAGE_ID, 'channel-list', 'The photo you uploaded is too small! It must be at least 1536 pixels wide and 570 pixels tall.'])}</span>
                     <div class="thumb-hover-wrap">
-                        <span id="upImgiOS"></sapn>
+                        <span></sapn>
                     </div>
                 </div>
                 <div class="banner-text">
+                    <acronym class="mark-required" title="Required field">*</acronym>
                     ${nn._([cms.global.PAGE_ID, 'channel-list', 'Recommended large channel art size'])}: 1536 x 570
                 </div>
             </div>
 
             <div class="banner-wrap">
                 <div class="thumb-wrap">
-                    <div class="btn-upload-flash"></div>
+                    <div class="btn-upload-flash"><span id="upImgAndroid" /></div>
                     <div class="progress hide">
                       <div class="progress-bar progress-bar-striped active"  role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
                         <span class="sr-only">&nbsp;</span>
                       </div>
                     </div>
 
-                    <div class="centre-image" id="keyCardAndroid" style="background-image: url('${androidBannerUrl}?${cms.global.RAND}')"></div>
+                    <div class="centre-image" id="keyCardAndroid" data-meta="${androidBannerUrl}" style="background-image: url('${androidBannerUrl}')"></div>
 
                     <span class="thumb-inner-text imgTitle {{if androidBannerUrl !== ''}} hide{{/if}}">${nn._([cms.global.PAGE_ID, 'channel-list', 'Andriod image Upload Now!'])}</span>
                     <span class="thumb-inner-warning errMsg hide">${nn._([cms.global.PAGE_ID, 'channel-list', 'The photo you uploaded is too small! It must be at least 800 pixels wide and 244 pixels tall.'])}</span>
                     <div class="thumb-hover-wrap">
-                        <span id="upImgAndroid" ></span>
+                        <span ></span>
                     </div>
                 </div>
                 <div class="banner-text">
+                    <acronym class="mark-required" title="Required field">*</acronym>
                     ${nn._([cms.global.PAGE_ID, 'channel-list', 'Recommended large channel art size'])}: 800 x 244
                 </div>
             </div>
