upload video and create new episode & program and get th image

--- a/video-upload.html
+++ b/video-upload.html
@@ -147,7 +147,7 @@
         </div>
     </div>
     <p class="video-name">${tmpFileName}</p>
-    <div class="overlay-button-close"> </div>
+    <div class="overlay-button-close upload_cancel"></div>
 </div>
 </script>
 <!-- upload-element-tmpl End -->
