--- a/episode-list.html
+++ b/episode-list.html
@@ -446,7 +446,8 @@
             <legend class="form-title">Create an app notification</legend>
             <div class="thumb-wrap">
                 <div class="img-wrap">
-                    <img src="${imageUrl}" alt="" class="photo">
+                    <input type="file" id="upImage" class="hide" />
+                    <img id="epImage" src="${imageUrl}" alt="" class="photo">
                 </div>
                 <div class="thumb-hover-wrap">
                     <span>Upload image</span>
@@ -457,14 +458,14 @@
                     <!-- <div class="form-label">Click the notification to go to</div> -->
                     <div class="form-elements">
 
-                        <input type="text" value="${name}" placeholder="Episode title..">
+                        <input id="epName" type="text" value="${name}" placeholder="Episode title..">
                     </div>
 
                 </div>
 
                 <div class="form-group ">
                     <div class="form-elements">
-                        <textarea placeholder="Desscription...">${intro}</textarea>
+                        <textarea id="epIntro" placeholder="Desscription...">${intro}</textarea>
                     </div>
                 </div>
 
@@ -472,10 +473,10 @@
                      <div class="form-label">Publish status</div>
                         <div class="form-elements">
 
-                        <input type="radio" name="scheduleun-app" id="scheduleun-app1" autocomplete="off" {{if !isPublic}}checked="checked"{{/if}}>
+                        <input type="radio" name="isPublic" id="scheduleun-app1" autocomplete="off" value="false" {{if !isPublic}}checked="checked"{{/if}}>
                         <label class="radio-btn" for="scheduleun-app1">Darft</label>
 
-                        <input type="radio" name="scheduleun-app" id="scheduleun-app2" autocomplete="off" {{if isPublic}}checked="checked"{{/if}}>
+                        <input type="radio" name="isPublic" id="scheduleun-app2" autocomplete="off" value="true" {{if isPublic}}checked="checked"{{/if}}>
                         <label class="radio-btn" for="scheduleun-app2">Publish</label>
                         <br>
                     </div>
@@ -491,7 +492,7 @@
             </div>
             <div class="btn-gray">
                 <p class="left"></p>
-                <p class="center btnEpSave" data-meta="${id}" data-program="${progId}">Save</p>
+                <p class="center btnEpSave" data-meta="${id}" data-program="${progId}" data-ispublic="${isPublic}">Save</p>
                 <p class="right"></p>
             </div>
         </div>
