--- a/episode-list.html
+++ b/episode-list.html
@@ -384,11 +384,11 @@
     <div class="overlay-h316-left"></div>
     <div class="overlay-h316-center">
         <p class="overlay-button-close ov-cancel"></p>
-        <h2 class="overlay-title">Create a New Episode</h2>
+        <h2 class="overlay-title">${nn._([cms.global.PAGE_ID, 'episode-list', 'Create a New Episode'])}</h2>
         <div id="func-upvideo" data-meta="${oid}" class="btn-large btn-create">
             <div class="left"></div>
             <div class="center">    
-                <p>By upload video </p> 
+                <p>${nn._([cms.global.PAGE_ID, 'episode-list', 'By upload video'])}</p> 
                 <img src="images/icon-upload.png" alt="">               
             </div>
             <div class="right"></div>
@@ -396,7 +396,7 @@
         <div id="func-episode" data-meta="${oid}" class="btn-large btn-create">
             <div class="left"></div>
             <div class="center">
-                <p>By curation</p>    
+                <p>${nn._([cms.global.PAGE_ID, 'episode-list', 'By curation'])}</p>    
                 <img src="images/icon-pencel.png" alt="">                   
             </div>
             <div class="right"></div>
@@ -405,7 +405,7 @@
         <div class="overlay-button-holder">
             <div class="btn-gray ov-cancel">
                 <p class="left"></p>
-                <p  class="center langkey">Close</p>
+                <p  class="center langkey">${nn._([cms.global.PAGE_ID, 'episode-list', 'Close'])}</p>
                 <p class="right"></p>
             </div>
         </div>
@@ -441,43 +441,40 @@
     <div class="overlay-h316-left"></div>
     <div class="overlay-h316-center">
         <p class="overlay-button-close ov-cancel"></p>
-        <h2 class="overlay-title">Edit episode infomation</h2>
+        <h2 class="overlay-title">${nn._([cms.global.PAGE_ID, 'episode-list', 'Edit episode infomation'])}</h2>
         <div class="overlay-content">
-            <legend class="form-title">Create an app notification</legend>
             <div class="thumb-wrap">
-                <div class="img-wrap">
+                <div class="progress hide">
+                    <div class="progress-bar active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 0%;">
+                        <span class="sr-only progress-bar-text">0%</span>
+                    </div>
+                </div>
+                <div class="img-wrap" >
                     <input type="file" id="upImage" class="hide" />
-                    <img id="epImage" src="${imageUrl}" alt="" class="photo">
+                    <img id="epImage" src="${imageUrl}" alt="" class="photo" >
                 </div>
                 <div id="upload-box" class="thumb-hover-wrap curHand">
-                    <span>Upload image</span>
+                    <span>${nn._([cms.global.PAGE_ID, 'episode-list', 'Upload image'])}</span>
                 </div>
             </div>
             <div class="form-wrap">
                 <div class="form-group required-field">
-                    <!-- <div class="form-label">Click the notification to go to</div> -->
                     <div class="form-elements">
-
-                        <input id="epName" type="text" value="${name}" placeholder="Episode title..">
+                        <input id="epName" type="text" value="${name}" placeholder="${nn._([cms.global.PAGE_ID, 'episode-list', 'Episode title...'])}">
                     </div>
-
                 </div>
-
                 <div class="form-group ">
                     <div class="form-elements">
-                        <textarea id="epIntro" placeholder="Desscription...">${intro}</textarea>
+                        <textarea id="epIntro" placeholder="${nn._([cms.global.PAGE_ID, 'episode-list', 'Desscription...'])}">${intro}</textarea>
                     </div>
                 </div>
-
                 <div class="form-group">
-                     <div class="form-label">Publish status</div>
+                     <div class="form-label">${nn._([cms.global.PAGE_ID, 'episode-list', 'Publish status'])}</div>
                         <div class="form-elements">
-
                         <input type="radio" name="isPublic" id="scheduleun-app1" autocomplete="off" value="false" {{if !isPublic}}checked="checked"{{/if}}>
-                        <label class="radio-btn" for="scheduleun-app1">Darft</label>
-
+                        <label class="radio-btn" for="scheduleun-app1">${nn._([cms.global.PAGE_ID, 'episode-list', 'Darft'])}</label>
                         <input type="radio" name="isPublic" id="scheduleun-app2" autocomplete="off" value="true" {{if isPublic}}checked="checked"{{/if}}>
-                        <label class="radio-btn" for="scheduleun-app2">Publish</label>
+                        <label class="radio-btn" for="scheduleun-app2">${nn._([cms.global.PAGE_ID, 'episode-list', 'Publish'])}</label>
                         <br>
                     </div>
 
@@ -487,12 +484,12 @@
         <div class="overlay-button-holder">
             <div class="btn-gray">
                 <p class="left"></p>
-                <p class="center ov-cancel">Close</p>
+                <p class="center ov-cancel">${nn._([cms.global.PAGE_ID, 'episode-list', 'Close'])}</p>
                 <p class="right"></p>
             </div>
             <div class="btn-gray">
                 <p class="left"></p>
-                <p class="center btnEpSave" data-meta="${id}" data-program="${progId}" data-ispublic="${isPublic}">Save</p>
+                <p class="center btnEpSave" data-meta="${id}" data-program="${progId}" data-ispublic="${isPublic}">${nn._([cms.global.PAGE_ID, 'episode-list', 'Save'])}</p>
                 <p class="right"></p>
             </div>
         </div>
