video upload language string

--- a/video-upload.html
+++ b/video-upload.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" href="stylesheets/lightbox.css?v=411104" />
 <link rel="stylesheet" href="stylesheets/episode.css?v=411104" />
 <link rel="stylesheet" href="stylesheets/cms-component.css?v=411104" />
-<title>FLIPr.tv - Episode list</title>
+<title>FLIPr.tv - Video upload</title>
 </head>
 <body>
 <div id="fb-root"></div>
@@ -65,12 +65,12 @@
         <div class="clearfix title-func">
             <h2>
                 <span id="channel-name" ></span>
-                <span class="title-crumb">&gt; Create new episode &gt; Upload a video</span>
+                <span class="title-crumb langkeyT">&gt; Create new episode &gt; Upload a video</span>
             </h2>
         </div>
         <div class="intro clearfix">
             <p>
-                <span class="langkey">The uploaded video will be import to an episode automatically.</span>
+                <span class="langkeyT">The uploaded video will be import to an episode automatically.</span>
             </p>        
         </div>
 
@@ -81,7 +81,7 @@
                 </div>
                 <input type="file" id="files" multiple class="hide" />
                 <div id="upload-box" class="upload-video-btn btn-dash hide">
-                    <span class="title"><img src="images/icon-upload.png">Choose videos to upload</span>
+                    <span class="title"><img src="images/icon-upload.png"><span class="langkeyT">Choose videos to upload</span></span>
 
                 </div>
             </div>
