--- a/video-upload.html
+++ b/video-upload.html
@@ -65,7 +65,7 @@
         <div class="clearfix title-func">
             <h2>
                 <span id="channel-name" ></span>
-                <span class="title-crumb langkeyT">&gt; Create new episode &gt; Upload a video</span>
+                <span class="title-crumb langkeyH">&gt; Create new episode &gt; Upload a video</span>
             </h2>
         </div>
         <div class="intro clearfix">
@@ -84,6 +84,11 @@
                     <span class="title"><img src="images/icon-upload.png"><span class="langkeyT">Choose videos to upload</span></span>
 
                 </div>
+
+                <div >
+                    <a href="#" class="normal-btn is-right langkeyT btn-backEpisode">Done</a>
+                </div>
+
             </div>
         </div>
 
