--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 <meta http-equiv="cache-control" content="no-cache" />
 <meta http-equiv="pragma" content="no-cache" />
 <meta http-equiv="expires" content="0" />
-<link rel="stylesheet" href="stylesheets/perfect-scrollbar.css?v=411104" />
-<link rel="stylesheet" href="stylesheets/overlay.css?v=411104" />
-<link rel="stylesheet" href="stylesheets/style.css?v=411104" />
-<link rel="stylesheet" href="stylesheets/lightbox.css?v=411104" />
-<link rel="stylesheet" href="stylesheets/channel.css?v=411104" />
-<link rel="stylesheet" href="stylesheets/com-9x9-cycle.css?v=411104" />
-<link rel="stylesheet" href="stylesheets/cms-component.css?v=411104" />
+<link rel="stylesheet" href="stylesheets/perfect-scrollbar.css?v=41110499" />
+<link rel="stylesheet" href="stylesheets/overlay.css?v=41110499" />
+<link rel="stylesheet" href="stylesheets/style.css?v=41110499" />
+<link rel="stylesheet" href="stylesheets/lightbox.css?v=41110499" />
+<link rel="stylesheet" href="stylesheets/channel.css?v=41110499" />
+<link rel="stylesheet" href="stylesheets/com-9x9-cycle.css?v=41110499" />
+<link rel="stylesheet" href="stylesheets/cms-component.css?v=41110499" />
 <title>FLIPr.tv - My Programs</title>
 </head>
 <body>
@@ -540,12 +540,12 @@
 <script src="javascripts/libs/jquery.cookie.min.js?v=411104"></script>
 <script src="javascripts/libs/json2.min.js?v=411104"></script>
 <script src="javascripts/libs/purl.min.js?v=411104"></script>
-<script src="javascripts/v3/config.js?v=411104"></script>
-<script src="javascripts/v3/func.common.js?v=411104"></script>
-<script src="javascripts/v3/func.get-url.js?v=411104"></script>
-<script src="javascripts/v3/func.index.js?v=411104"></script>
-<script src="javascripts/v3/domready.common.js?v=411104"></script>
-<script src="javascripts/v3/domready.get-url.js?v=411104"></script>
-<script src="javascripts/v3/domready.index.js?v=411104"></script>
+<script src="javascripts/v3/config.js?v=41110499"></script>
+<script src="javascripts/v3/func.common.js?v=41110499"></script>
+<script src="javascripts/v3/func.get-url.js?v=41110499"></script>
+<script src="javascripts/v3/func.index.js?v=41110499"></script>
+<script src="javascripts/v3/domready.common.js?v=41110499"></script>
+<script src="javascripts/v3/domready.get-url.js?v=41110499"></script>
+<script src="javascripts/v3/domready.index.js?v=41110499"></script>
 </body>
 </html>
