--- a/channel-add.html
+++ b/channel-add.html
@@ -388,7 +388,7 @@
         <div class="fmfield">
             <div class="connected brand youtube-sync">
                 <div class="share-item first">
-                    <img src="images/icon_sync.png">
+                    <img src="images/icon_sync_on.png">
                     <a id="youtube-sync-switch" href="#" class="switch-off">OFF</a> 
                     <a id="fb-reconnect" href="javascript:void(0);">
                         <img src="images/icon_question.png" alt="">
