1. 拿掉"Add YouTube channel or playlist URL"輸入欄內的預設文字。

--- a/channel-add.html
+++ b/channel-add.html
@@ -203,7 +203,7 @@
         <div class="fmfield">
             <p class="text">
                 <span>
-                    <input type="text" name="sourceUrl" id="ytUrl" maxlength="100" value="" class="text" data-ctype="ytsync" placeholder="${nn._([cms.global.PAGE_ID, 'setting-form', 'Please input YouTube or Vimeo URL.'])}">
+                    <input type="text" name="sourceUrl" id="ytUrl" maxlength="100" value="" class="text" data-ctype="ytsync" >
                 </span>
             </p>
             <div class="clear">
