2. Add channel or playlist URL下方的中英文文字改成：
[英文]
URL sample :https://www.youtube.com/channel/userid
 https://www.youtube.com/playlist?list=userid
 https://vimeo.com/channels/channelid
 https://vimeo.com/userid/videos

[中文]
範例連結 :https://www.youtube.com/channel/userid
 https://www.youtube.com/playlist?list=userid
 https://vimeo.com/channels/channelid
 https://vimeo.com/userid/videos

--- a/channel-add.html
+++ b/channel-add.html
@@ -213,7 +213,7 @@
                     <td >
                         &nbsp;https://www.youtube.com/channel/userid<br/>
                         &nbsp;https://www.youtube.com/playlist?list=userid<br/>
-                        &nbsp;https://vimeo.com/channels/userid<br/>
+                        &nbsp;https://vimeo.com/channels/channelid<br/>
                         &nbsp;https://vimeo.com/userid/videos<br/>
                     </td>
                 </tr></table>
