--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                 <div class="left"></div>
                 <div class="center">
                     <p>{{html nn._([cms.global.PAGE_ID, 'overlay', 'Sync<br />Program'])}}</p>
-                    <img src="images/icon_sync.png" width="48px" alt="">
+                    <img src="images/icon_sync.png" alt="">
                 </div>
                 <div class="right"></div>
             </div>
