import button function

--- a/episode-list.html
+++ b/episode-list.html
@@ -430,6 +430,8 @@
             <div class="form-wrap">
                 <br /><br /><br />
                 Episode URL : &nbsp; <input id="importInText" type="text" placeholder="http://www.mars.cms/view/p35443/e995914" style="width: 68%; height:1.6rem; font-size: 1.1rem" />
+                <br /><br />
+                <div class="notice hide" id="epImportNotice" style="color: red">請輸入必填項目。</div>
             </div>
         </div>
 
